test/check/multi_def_errors.expected
File "multi_def.mim", line 4, characters 4-5
4 |     c = b;
        ^
Error: Redefinition of local symbol c
Also defined here:
3 |     c = a;
        ^
